@@ -23,6 +23,7 @@
 #include "common.h"
 #include "types.h"
 
+class Ui_ExtProgPath;
 class QRadioButton;
 class QCheckBox;
 class QProgressBar;
@@ -107,5 +108,20 @@ private:
 	void updateValues();
 };
 
+// =============================================================================
+class ExtProgPathPrompt : public QDialog {
+	Q_OBJECT
+	
+public:
+	explicit ExtProgPathPrompt (str progName, QWidget* parent = 0, Qt::WindowFlags f = 0);
+	virtual ~ExtProgPathPrompt();
+	str getPath() const;
+	
+public slots:
+	void findPath();
+	
+private:
+	Ui_ExtProgPath* ui;
+};
+
 #endif // DIALOGS_H
-// kate: indent-mode cstyle; indent-width 4; replace-tabs off; tab-width 4; 
